# ImageLite

./: CMakeLists.txt
.github/workflows/: build.yml
apps/cli/src/: main.cpp
libs/core/: CMakeLists.txt
libs/filters/: CMakeLists.txt
tests/: CMakeLists.txt
